title image and style

--- a/index.html
+++ b/index.html
@@ -1,9 +1,29 @@
 <html>
+<style>
+  h2 {
+  color: #2a6f97;
+  font-size: 80px;
+  text-align: center;
+    text-decoration-line: underline;
+  text-decoration-color: white;
+} 
 
-hi
+body {
+  background-color: pink;
+}
 
+img {
+  width: 25%;
+  border: 5px solid #ffffff;
+}
+</style>
 
-
-
+<body>
+    <h2> Kara's Website </h2>
+    
+    <center>
+    <img src="https://www.frommers.com/system/media_items/attachments/000/861/136/s980/Bahamas.jpg?1503496901"
+    
+  </body>
 
 </html>
