--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ img {
 <body>
     <h2> Kara's Website </h2>
     <center>
-    <img src="https://www.frommers.com/system/media_items/attachments/000/861/136/s980/Bahamas.jpg?1503496901"
+    <img src="https://www.frommers.com/system/media_items/attachments/000/861/136/s980/Bahamas.jpg?1503496901">
     
   </body>
 
