--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <html>
+
+<head>
+  <link rel="icon" href="https://www.frommers.com/system/media_items/attachments/000/861/136/s980/Bahamas.jpg?1503496901"
+        <title> Kara's Website </title>
+</head>
   
 <style>
   h2 {
@@ -23,7 +28,6 @@ img {
     <h2> Kara's Website </h2>
     <center>
     <img src="https://www.frommers.com/system/media_items/attachments/000/861/136/s980/Bahamas.jpg?1503496901">
-    
   </body>
 
 </html>
