--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
 
 <head>
-  <link rel="icon" href="https://www.frommers.com/system/media_items/attachments/000/861/136/s980/Bahamas.jpg?1503496901"
-        <title> Kara's Website </title>
+  <link rel="icon" href="https://www.frommers.com/system/media_items/attachments/000/861/136/s980/Bahamas.jpg?1503496901">
+        <title> Kara's Website 
+</title>
 </head>
   
 <style>
