--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
 <html>
-
+  
+  <head>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  
+  <body>
+    
+    <nav>
+  <li><a href="index.html"> HOME </a></li>
+  <li><a href="dataapp.html"> DATA APP </a></li>
+  <li> COLOR SLEUTH </a></li>
 <head>
   <link rel="icon" href="https://www.frommers.com/system/media_items/attachments/000/861/136/s980/Bahamas.jpg?1503496901">
         <title> Kara's Website 
