--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
   <li><a href="index.html"> HOME </a></li>
   <li><a href="dataapp.html"> DATA APP </a></li>
   <li> COLOR SLEUTH </a></li>
-<head>
+    </nav>
+
+    <head>
   <link rel="icon" href="https://www.frommers.com/system/media_items/attachments/000/861/136/s980/Bahamas.jpg?1503496901">
         <title> Kara's Website 
 </title>
