--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav>
   <li><a href="index.html"> HOME </a></li>
   <li><a href="dataapp.html"> DATA APP </a></li>
-  <li> COLOR SLEUTH </a></li>
+  <li><a href= "colorsleuth.html"> COLOR SLEUTH </a></li>
     </nav>
 <br>
     
