Updateddd colorsleuth.html

--- a/colorsleuth.html
+++ b/colorsleuth.html
@@ -1,8 +1,20 @@
-body{
-  background-color: pink;
-}
+<html>
+<head>
+  <title>Color Sleuth App</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <nav>
+    <li><a href="index.html">HOME</a></li>
+    <li><a href="dataapp.html">DATA APP</a></li>
+    <li><a href="colorsleuth.html">COLOR SLEUTH</a></li>
+  </nav>
+    <h1>Color Sleuth App</h1>
+    <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/lR2BR83RCV-0OElJFzHqTFvj8tHo0NZIbLSvUPkajv6/embed?nosource"></iframe>
+</body>
+</html>
 
-nav{
+nav {
   list-style-type: none;
   background-color: #2a6f97;
   position: fixed;
@@ -13,45 +25,22 @@ nav{
   padding: 16px;
 }
 
-li{
+li {
   display: inline;
   padding: 24px;
-  
 }
 
 li:hover {
   background: #023e8a;
 }
 
-a{
+a {
   text-decoration: none;
   color: white;
 }
 
-h1{
+h1 {
   color: white;
   font-size: 40px;
   text-align: center;
-  text-color: white;
 }
-
-<html>
-  
-  <head>
-    <link rel="stylesheet" href="style.css">
-</head>
-
-  <nav>
-  <li><a href="index.html"> HOME </a></li>
-  <li><a href="dataapp.html"> DATA APP </a></li>
-  <li><a href= "colorsleuth.html"> COLOR SLEUTH </a></li>
-</nav>
-
- <br>
-    <center>
-      <br>
-    <h1> Color Sleuth App </h1>
-<center>
-  <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/lR2BR83RCV-0OElJFzHqTFvj8tHo0NZIbLSvUPkajv6/embed?nosource"></iframe>
-  
-  </html>
