--- a/colorsleuth.html
+++ b/colorsleuth.html
@@ -1,59 +1,16 @@
 <html>
-  
-  <head>
-    <link rel="stylesheet" href="style.css">
+<head>
+  <title>Color Sleuth App</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-  
-  <nav>
-  <li><a href="index.html"> HOME </a></li>
-  <li><a href="dataapp.html"> DATA APP </a></li>
-  <li><a href= "colorsleuth.html"> COLOR SLEUTH </a></li>
-</nav>
-
 <body>
- <br>
-    <center>
-      <br>
-    <h1> Color Sleuth App </h1>
-<center>
-  <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/lR2BR83RCV-0OElJFzHqTFvj8tHo0NZIbLSvUPkajv6/embed?nosource"></iframe>
-  
-  </body>
-  </html>
-
-nav{
-  list-style-type: none;
-  background-color: #2a6f97;
-  position: fixed;
-  width: 100vw;
-  top: 0;
-  left: 0;
-  color: white;
-  padding: 16px;
-}
-
-body{
-  background-color: pink;
-}
-
-li{
-  display: inline;
-  padding: 24px;
-  
-}
-
-li:hover{
-  background: #023e8a;
-}
-
-a{
-  text-decoration: none;
-  color: white;
-}
-
-h1{
-  color: white;
-  font-size: 40px;
-  text-align: center;
-  text-color: white;
-}
+  <nav>
+    <li><a href="index.html">HOME</a></li>
+    <li><a href="dataapp.html">DATA APP</a></li>
+    <li><a href="colorsleuth.html">COLOR SLEUTH</a></li>
+  </nav>
+  <center>
+    <h1>Color Sleuth App</h1>
+    <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/lR2BR83RCV-0OElJFzHqTFvj8tHo0NZIbLSvUPkajv6/embed?nosource"></iframe>
+</body>
+</html>
