--- a/colorsleuth.html
+++ b/colorsleuth.html
@@ -12,5 +12,6 @@
   <center>
     <h1>Color Sleuth App</h1>
     <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/lR2BR83RCV-0OElJFzHqTFvj8tHo0NZIbLSvUPkajv6/embed?nosource"></iframe>
+  </center>
 </body>
 </html>
