--- a/colorsleuth.html
+++ b/colorsleuth.html
@@ -9,9 +9,16 @@
     <li><a href="dataapp.html">DATA APP</a></li>
     <li><a href="colorsleuth.html">COLOR SLEUTH</a></li>
   </nav>
-  <center>
-    <h1>Color Sleuth App</h1>
-    <br>
+  
+   <br>
+    <center>
+      <br>
+    <h1> Color Sleuth App </h1>
+    
+<br>
+<center>
+<iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/VEudBc7IeHRwTcuZAZfnjevRGRufLOfnCWtepK-zMTs/embed?nosource"></iframe>
+    
     <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/lR2BR83RCV-0OElJFzHqTFvj8tHo0NZIbLSvUPkajv6/embed?nosource"></iframe>
   </center>
 </body>
