--- a/colorsleuth.html
+++ b/colorsleuth.html
@@ -35,6 +35,7 @@
 <body>
     <h2> Color Sleuth App </h2>
     <center>
+  <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/lR2BR83RCV-0OElJFzHqTFvj8tHo0NZIbLSvUPkajv6/embed?nosource"></iframe>
   </body>
 
 </html>
