--- a/colorsleuth.html
+++ b/colorsleuth.html
@@ -4,7 +4,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
 
-  <head> 
+  <head>
+  <link rel="icon" href="https://www.frommers.com/system/media_items/attachments/000/861/136/s980/Bahamas.jpg?1503496901">
+      <br>  
+    
     <title> Color Sleuth App 
         
         </title>
